proyecto fase2 y fase3/Kubenetes/Practica-kubernetes/Grpc-pod/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-deployment
  namespace: squidgame
  labels:
    app: grpc-deployment
spec:
  selector:
    matchLabels:
      app: grpc-deployment
  replicas: 4
  template:
    metadata:
      labels:
        app: grpc-deployment
    spec:
      hostname: grpc-pod-host
      containers:
        - name: grpc-client-api
          image: sergiounix/client-api-go_fase2
          ports:
            - containerPort: 2000
        - name: grpc-server
          image: sergiounix/server-node_fase2
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpc-deployment
  name: svc-grpc
  namespace: squidgame
spec:
  type: ClusterIP
  selector:
    app: grpc-deployment
  ports:
    - port: 2000
      targetPort: 2000
      protocol: TCP
