proyecto fase2 y fase3/Kubenetes/Practica-kubernetes/Grpc-pod/ingressRabbit100.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo-rabbit
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: colas.sop-es-sergio.online 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-grpc
            port:
              number: 2000
